update project.clj for new reality